[project]
name = "ipuscout-fork"
version = "0.1.0"
description = "Automatically monitors and downloads exam result PDFs from GGSIPU website with 24-hour auto-cleanup."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=0.8.0",
    "aiohttp>=3.8.1",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.9.0",
]
